--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "toy project backend - node, express, typescript, mysql",
   "main": "app.ts",
   "scripts": {
-    "start": "nodemon src/app",
+    "start": "ts-node src/app",
     "dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,12 +24,15 @@
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/pg": "^8.6.5",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
