--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "toy project backend - node, express, typescript, mysql",
   "main": "app.ts",
   "scripts": {
-    "start": "ts-node src/app",
+    "build": "tsc --build",
+    "start": "node dist/app.js",
     "dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
